tests/cases/variables/errors/variables-tuple-pattern-non-tuple.ari
fn main() -> i64 {
  let (left, right) = 1;
  return left + right;
}
